--- a/News(oc)/News(oc)/PictureTableViewCell.xib
+++ b/News(oc)/News(oc)/PictureTableViewCell.xib
@@ -8,44 +8,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="picture_cell" rowHeight="150" id="KGk-i7-Jjw" customClass="PictureTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="picture_cell" rowHeight="200" id="KGk-i7-Jjw" customClass="PictureTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KbR-wT-tFZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbR-wT-tFZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                         <subviews>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="hUG-gn-RYI">
-                                <rect key="frame" x="147" y="104" width="80" height="37"/>
+                                <rect key="frame" x="287" y="154" width="80" height="37"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="BL6-2x-ewE"/>
+                                    <constraint firstAttribute="width" constant="80" id="U5y-bf-w0e"/>
                                 </constraints>
                                 <color key="currentPageIndicatorTintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                             </pageControl>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="hUG-gn-RYI" firstAttribute="top" secondItem="KbR-wT-tFZ" secondAttribute="top" constant="104" id="1Yv-2x-dNb"/>
-                            <constraint firstItem="hUG-gn-RYI" firstAttribute="bottom" secondItem="KbR-wT-tFZ" secondAttribute="bottomMargin" id="F21-YT-g8a"/>
-                            <constraint firstItem="hUG-gn-RYI" firstAttribute="centerX" secondItem="KbR-wT-tFZ" secondAttribute="centerX" id="fpU-Nq-d2i"/>
-                            <constraint firstAttribute="trailing" secondItem="hUG-gn-RYI" secondAttribute="trailing" constant="148" id="qo0-HZ-MT2"/>
+                            <constraint firstAttribute="height" constant="199" id="0J6-sJ-M8z"/>
+                            <constraint firstItem="hUG-gn-RYI" firstAttribute="top" secondItem="KbR-wT-tFZ" secondAttribute="top" constant="154" id="36i-Or-1iv"/>
+                            <constraint firstItem="hUG-gn-RYI" firstAttribute="bottom" secondItem="KbR-wT-tFZ" secondAttribute="bottomMargin" id="4Af-tj-Yb9"/>
+                            <constraint firstItem="hUG-gn-RYI" firstAttribute="leading" secondItem="KbR-wT-tFZ" secondAttribute="leading" constant="287" id="Jt4-eA-0MJ"/>
+                            <constraint firstItem="hUG-gn-RYI" firstAttribute="trailing" secondItem="KbR-wT-tFZ" secondAttribute="trailingMargin" id="YIC-Yt-sU0"/>
                         </constraints>
                     </scrollView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="KbR-wT-tFZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="18z-Tr-vbX"/>
-                    <constraint firstAttribute="trailing" secondItem="KbR-wT-tFZ" secondAttribute="trailing" id="Ph3-iQ-I8O"/>
-                    <constraint firstItem="KbR-wT-tFZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cQx-j0-FC6"/>
-                    <constraint firstAttribute="bottom" secondItem="KbR-wT-tFZ" secondAttribute="bottom" id="kAF-f5-hOi"/>
+                    <constraint firstItem="KbR-wT-tFZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="K3R-2Z-oBt"/>
+                    <constraint firstItem="KbR-wT-tFZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="LeG-eA-bL0"/>
+                    <constraint firstAttribute="bottom" secondItem="KbR-wT-tFZ" secondAttribute="bottom" id="P3U-WX-v1w"/>
+                    <constraint firstAttribute="trailing" secondItem="KbR-wT-tFZ" secondAttribute="trailing" id="Rh2-2l-sta"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="pageControl" destination="hUG-gn-RYI" id="Z9Q-cN-7l5"/>
                 <outlet property="scrollView" destination="KbR-wT-tFZ" id="2xY-CQ-QRQ"/>
             </connections>
-            <point key="canvasLocation" x="340.5" y="298"/>
+            <point key="canvasLocation" x="340.5" y="323"/>
         </tableViewCell>
     </objects>
 </document>
